--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
     "autoprefixer": "^10",
-    "eslint": "^8",
+    "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
