fix: goodreads currently reading book extracted from rss feed data

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "rss-parser": "^3.13.0"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
