--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.480",
+    "@vercel/analytics": "^1.5.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18",
